# raphmaster-2006

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
build-instructions/: 0-Software-Overview.md  0-Specs.md  0.1-Cocktails-recipes.md  0.2-Slot-Calibration.md  1-BillofMaterial-DRAFT.md  1-BillofMaterial.md  2.1-Calib-Slot.md  2.2-Prepare-Cocktail.md  2.2-Software-Process.md
build-instructions/design-data/: bottle-measures.md  cocktail-recipes.md  ingredient-sample.md  volumic-mass-data.md
source/main-fw/: CMakeLists.txt  embeddedgen.bat  sdkconfig  sdkconfig.old
source/main-fw/main/: CMakeLists.txt  CocktailExplorer.c  CocktailExplorer.h  Control.c  Control.h  FWConfig.h  HWConfig.h  HardwareGPIO.c  HardwareGPIO.h  Settings.c  Settings.h  StationSettings.c  StationSettings.h  WebServer.c  cocktaildb.pb.h  main.c  main.h
source/main-fw/main/assets/: EmbedCocktailDb.c  EmbedCocktailDb.h  EmbedWWW.c  EmbedWWW.h  EmbeddedFiles.c  EmbeddedFiles.h  EmbeddedFiles.txt
source/main-fw/main/cocktaildb/: cocktaildb.pb.c  cocktaildb.pb.h
source/main-fw/main/webserver/: ApiURL.h  WebServer.c  WebServer.h
source/main-fw/main/webserver/api/: CocktailApi.c  CocktailApi.h  MiscApi.c  MiscApi.h  ProductionApi.c  ProductionApi.h  Settings.c  Settings.h  SettingsApi.c  SettingsApi.h
source/protobuf/: cocktaildb.c  cocktaildb.h  cocktaildb.options  cocktaildb.pb.c  cocktaildb.pb.h  cocktaildb.proto  protobufgen.sh
source/rm2k6-fw/: CMakeLists.txt  sdkconfig
tools/embeddedgen/: embeddedgen.deps.json
tools/generate-code/: generate-code.sln
(+41 files in other folders)
